<resources>
    <string name="app_name">semoc avi 2</string>
    <string name="title_home">Home</string>
    <string name="title_palestrante">Palestrante</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_minicursos">Minicursos</string>
    <string name="title_palestras">Palestras</string>
    <string name="title_palestra_details">Palestra detalhe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_information">information</string>
    <string name="tittle_mini_curso_details">Detalhes Mini Cursos</string>
</resources>