<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.semocavi2.ui.home.HomeFragment"
        android:label="@string/title_home"

        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_palestrante"
        android:name="com.example.semocavi2.ui.palestrante.PalestrantesFragment"
        android:label="@string/title_palestrante"
        tools:layout="@layout/fragment_palestrante"
        />

    <fragment
        android:id="@+id/navigation_palestras"
        android:name="com.example.semocavi2.ui.palestra.PalestraFragment"
        android:label="@string/title_palestras"
        tools:layout="@layout/fragment_palestra" />

    <fragment
    android:id="@+id/navigation_palestras_details"
    android:name="com.example.semocavi2.ui.palestra.PalestraDetaisFragment"
    android:label="@string/title_palestra_details"
    tools:layout="@layout/fragment_palestra" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.semocavi2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_minicursos"
        android:name="com.example.semocavi2.ui.minicurso.MiniCursoFragment"
        android:label="@string/title_minicursos"
        tools:layout="@layout/fragment_mini_curso" />
    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.semocavi2.ui.information.InformacaoFragment"
        android:label="@string/tittle_information"
        tools:layout="@layout/fragment_informacao" />
    <fragment
        android:id="@+id/navigation_minicursos_details"
        android:name="com.example.semocavi2.ui.minicurso.MiniCursoDetailsFragment"
        android:label="@string/tittle_mini_curso_details"
        tools:layout="@layout/fragment_mini_curso_details" />

</navigation>